phase 2 of additions
